fix background color in dark mode

--- a/src/components/Lexicon.css
+++ b/src/components/Lexicon.css
@@ -89,7 +89,7 @@ option{
 
 @media (prefers-color-scheme: dark){
   .adaptive{
-    background-color: #242424;
+    background-color: #050505;
     color: #ccc;
   }
 
